--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,19 @@
 <footer>
-	<p>By Dazza (aka. McDoob)</p>
+	<p>Follow me, Darrell Mayson, on..</p>
+	<div class="social_networking">
+		{% if site.twitter_username %}
+    <a href="https://twitter.com/{{ site.twitter_username }}">
+      <i class="fa fa-twitter fa-2x"></i> Twitter
+    </a>
+  {% endif %}
+  {% if site.github_username %}
+    <a href="https://github.com/{{ site.github_username }}">
+      <i class="fa fa-github fa-2x"></i> GitHub
+    </a>
+	{% endif %}
+  {% if site.facebook_username %}
+    <a href="https://www.facebook.com/{{ site.facebook_username }}">
+      <i class="fa fa-facebook fa-2x"></i> Facebook
+    </a>
+	{% endif %}
 </footer>
